[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/hub/clipboard-clip.png" type="Texture" id=1]
[ext_resource path="res://assets/hub/pig.png" type="Texture" id=2]
[ext_resource path="res://assets/hub/clipboard-shadow.png" type="Texture" id=4]
[ext_resource path="res://assets/hub/pig-shadow.png" type="Texture" id=5]
[ext_resource path="res://assets/hub/clipboard.png" type="Texture" id=6]
[ext_resource path="res://assets/hub/hub.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Peter Marker.otf" type="DynamicFontData" id=8]
[ext_resource path="res://MapUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Client.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/sfx/zapsplat_foley_money_coins_few_drop_into_glass_jar_collection_005_94867.mp3" type="AudioStream" id=14]
[ext_resource path="res://levels/Pig.gd" type="Script" id=15]
[ext_resource path="res://levels/Shop.gd" type="Script" id=16]
[ext_resource path="res://WorkOrder.tscn" type="PackedScene" id=17]
[ext_resource path="res://BikeWall.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/hub/shimonoseki.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Money:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 825 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Money:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pig:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pig:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "show"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Money:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 825 ), Vector2( 0, 726 ), Vector2( 0, 726 ), Vector2( 0, 825 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Money:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pig:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pig:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -108 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[node name="Shop" type="Node2D"]
script = ExtResource( 16 )

[node name="Shimonoseki" type="Sprite" parent="."]
position = Vector2( 1484, 294 )
texture = ExtResource( 19 )

[node name="Client" parent="." instance=ExtResource( 13 )]
position = Vector2( 1030, 413 )
scale = Vector2( 0.312042, 0.312042 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 638.0
margin_top = 51.0
margin_right = 758.0
margin_bottom = 701.0
color = Color( 0.458824, 0.309804, 0.141176, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1259.0
margin_top = 51.0
margin_right = 1377.0
margin_bottom = 701.0
color = Color( 0.458824, 0.309804, 0.141176, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hub" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="MapUI" parent="." instance=ExtResource( 10 )]

[node name="Pig" type="Node2D" parent="."]
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
money_sfx = ExtResource( 14 )

[node name="Pig-shadow" type="Sprite" parent="Pig"]
texture = ExtResource( 5 )
centered = false

[node name="Money" type="Label" parent="Pig"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 825.0
margin_right = 369.0
margin_bottom = 888.0
custom_fonts/font = SubResource( 1 )
text = "0 Â¥"
align = 1

[node name="Pig" type="Sprite" parent="Pig"]
texture = ExtResource( 2 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pig"]
anims/RESET = SubResource( 18 )
anims/show = SubResource( 19 )

[node name="Button" type="Button" parent="Pig"]
margin_top = 725.0
margin_right = 453.0
margin_bottom = 1074.0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 24 )

[node name="BikeWall" parent="." instance=ExtResource( 18 )]

[node name="Clipboard" type="Node2D" parent="."]
position = Vector2( 0, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Clipboard-shadow" type="Sprite" parent="Clipboard"]
texture = ExtResource( 4 )
centered = false

[node name="Clipboard" type="Sprite" parent="Clipboard"]
texture = ExtResource( 6 )
centered = false

[node name="WorkOrder" parent="Clipboard/Clipboard" instance=ExtResource( 17 )]
visible = false

[node name="Clipboard-clip" type="Sprite" parent="Clipboard"]
texture = ExtResource( 1 )
centered = false

[connection signal="mouse_entered" from="Pig/Button" to="Pig" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Pig/Button" to="Pig" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Pig/Button" to="Pig" method="_on_Button_pressed"]
